--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ version=1.6
 
 # Set to the location where ProGuard's proguard.jar file can be found
 #proguard-jar=
-proguard-jar=/usr/local/android/proguard.jar
+proguard-jar=./proguard/proguard.jar
 
 # If you are building the J2ME client:
 #
@@ -30,7 +30,7 @@ BB-JDK-home=/usr/local/bb-home
 
 # Set this to the location where you installed the Android SDK.
 #android-home=C:\\Program Files\\android-sdk-windows
-android-home=/usr/local/android
+android-home=/Users/vladg/droid/android-sdk/
 
 # Set this to the location of a Tomcat installation if you want to compile and run the zxing.org
 # web site and web application
